# ChangeLog for dev-perl/Net-DNS
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DNS/ChangeLog,v 1.13 2003/07/19 08:16:46 rac Exp $

*Net-DNS-0.37-r1 (19 Jul 2003)

  19 Jul 2003; <rac@gentoo.org> Net-DNS-0.37-r1.ebuild:
  Allow Test-Simple depend to be provided by perl 5.8.0-r12

*Net-DNS-0.37 (16 Jun 2003)

  16 Jun 2003; Michael Cummings <mcummings@gentoo.org> Net-DNS-0.37.ebuild:
  CPAN version bump; needs testing

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :

  forced version bump to install into correct locations
# ChangeLog for dev-perl/Net-DNS

*Net-DNS-0.22-r1 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*Net-DNS-0.22 (11 Jun 2002)

  19 Sep 2002; <mcummings@gentoo.org> : added missing dependancy for 
  Test-Simple, which provides Test-More, which is needed

  31 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> Net-DNS-0.22.ebuild :

  Added ppc to KEYWORDS.

  11 Jun 2002; Seemant Kulleen <seemant@gentool.org> Net-DNS-0.22.ebuild
  files/digest-Net-DNS-0.22 :

  arutha@gmx.de (Alexander Gretencord) in bug #3513 submitted a fix for the
  DEPEND list.  Meanwhile, a new version was released upstream.

*Net-DNS-0.12-r1 (5 May 2002)

  5 May 2002; Seemant Kulleen <seemant@gentoo.org> Net-DNS-0.12-r1.ebuild
  files/digest-Net-DNS-0.12-r1 :

  eclasses.

*Net-DNS-0.12 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.