@@ -1,9 +1,9 @@
-MD5 a76ab218fbf309e1500db0cc03bfc7c9 ChangeLog 1970
+MD5 d94972f0f5a62552559e2afa047c3f57 ChangeLog 2141
 MD5 f78d4445218eb3e79bd008697550997e Net-DNS-0.22-r1.ebuild 583
 MD5 d5f9c2a06383e9907f5ee5c9937c1172 Net-DNS-0.22.ebuild 581
 MD5 d558a6cf459e8cdcae5e526e277e81b1 Net-DNS-0.37.ebuild 683
 MD5 ac246de967ada37ed3d052a052158773 Net-DNS-0.37-r1.ebuild 705
-MD5 d3e1ec994c6f976a70132e727fda62a3 Net-DNS-0.38.ebuild 607
+MD5 ea9af8735c1378067570e59d141d5167 Net-DNS-0.38.ebuild 709
 MD5 643eb58f6da7f4557fda68d273e681b6 files/digest-Net-DNS-0.22 63
 MD5 643eb58f6da7f4557fda68d273e681b6 files/digest-Net-DNS-0.22-r1 63
 MD5 9c6aecd6a8a52abe98a8f08cf7fa7d5f files/digest-Net-DNS-0.37 63
